--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,7 +18,7 @@ markup:
 
 menu:
   main:
-    - name: Notes
+    - name: Review EasyEngine
       pageRef: /notes
       weight: 1
     - name: About
