--- a/hugo.yaml
+++ b/hugo.yaml
@@ -50,7 +50,7 @@ params:
 
   footer:
     displayCopyright: true
-    displayPoweredBy: true
+    displayPoweredBy: false
 
   editURL:
     enable: true
