update google analytics id

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -64,3 +64,15 @@ languages:
   vi:
     languageName: Tiếng Việt
     weight: 2
+
+# Parse Git commit
+enableGitInfo: true
+
+params:
+  # Display the last modification date
+  displayUpdatedDate: true
+  dateFormat: "January 2, 2006"
+
+services:
+  googleAnalytics:
+    ID: G-GM8E5BJVGS
