--- a/hugo.yaml
+++ b/hugo.yaml
@@ -54,7 +54,7 @@ params:
     logo:
       path: images/easyengine-notes.svg
       dark: images/easyengine-notes-dark.svg
-      link: /
+      link: /easyengine-notes/
       width: 40
       height: 20
 
