--- a/hugo.yaml
+++ b/hugo.yaml
@@ -66,7 +66,7 @@ params:
     displayTitle: true
     displayLogo: true
     logo:
-      path: images/easyengine-notes.svg
+      path: images/easyeengine-docker-gray.svg
       dark: images/easyengine-notes-dark.svg
       width: 30
       height: 30
